<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.achristians.recipe_app.EditScreen">

    <TextView
        android:id="@+id/lblName"
        android:layout_marginTop="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="15sp"
        android:layout_marginStart="10sp"
        />
    <EditText
        android:id="@+id/name"
        android:hint="E.g. Mitten's Famous Spinach Cobbler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:inputType="textPersonName"
        android:labelFor="@+id/name"
        android:layout_margin="10sp"/>
    <TextView
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:labelFor="@+id/name"
        android:layout_margin="10sp"/>
    <TextView
        android:id="@+id/lblDescription"
        android:layout_marginTop="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="15sp"
        android:layout_marginStart="10sp"
        />
    <EditText
        android:id="@+id/description"
        android:hint="E.g. Go-to recipe for all cats!"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:inputType="textPersonName"
        android:labelFor="@+id/description"
        android:layout_margin="10sp"/>
    <TextView
        android:id="@+id/lblIngredients"
        android:layout_marginTop="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textSize="15sp"
        android:layout_marginStart="10sp"
        />
    <EditText
        android:id="@+id/ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:labelFor="@+id/ingredients"
        android:hint="Chicken, eggs, pepper..."
        android:inputType="textMultiLine"
        android:layout_margin="10sp"/>
    <TextView
        android:id="@+id/lblInstructions"
        android:layout_marginTop="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textSize="15sp"
        android:layout_marginStart="10sp"
        />
    <EditText
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:labelFor="@+id/ingredients"
        android:hint="1. Pet your cats, 2. Mix in eggs..."
        android:inputType="textMultiLine"
        android:layout_margin="10sp"/>
    <TextView
        android:id="@+id/lblUrl"
        android:layout_marginTop="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textSize="15sp"
        android:layout_marginStart="10sp"
        />
    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:labelFor="@+id/url"
        android:hint="E.g. https://www.CookingWithMittens.com"
        android:inputType="textUri"
        android:layout_margin="10sp"/>
    <TextView
        android:id="@+id/Rating"
        android:layout_marginTop="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/ratingBar"
        android:textSize="15sp"
        android:layout_marginStart="10sp"
        />
    <RatingBar
        android:id="@+id/editRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        />
>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_centerInParent = "true"
        >
    <Button
        android:id="@+id/delete"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Delete"

        />
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Save"

        />
    </LinearLayout>
</LinearLayout></ScrollView>